--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "next": "9.5.2",
     "next-react-svg": "1.1.2",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-hook-form": "^6.8.3"
   },
   "devDependencies": {
     "postcss-preset-env": "^6.7.0",
