--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react-hook-form": "^6.8.3"
   },
   "devDependencies": {
+    "@types/node": "^14.11.1",
+    "@types/react": "^16.9.49",
     "postcss-preset-env": "^6.7.0",
-    "tailwindcss": "^1.7.6"
+    "tailwindcss": "^1.7.6",
+    "typescript": "^4.0.3"
   }
 }
