--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "next": "9.5.2",
     "next-react-svg": "1.1.2",
     "react": "16.13.1",
