--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "next-react-svg": "1.1.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-hook-form": "^6.8.3"
+    "react-hook-form": "^6.8.3",
+    "sass": "^1.27.0",
+    "swiper": "^6.3.4"
   },
   "devDependencies": {
     "@types/node": "^14.11.1",
