--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-hook-form": "^6.8.3",
+    "react-scroll": "^1.8.1",
+    "react-tabs": "^3.1.1",
     "sass": "^1.27.0",
     "swiper": "^6.3.4"
   },
